-*-change-log-*-

2.6.0.0 (current development version)
	* New solver flag: '--reject-unconstrained-dependencies'. (#2568)

2.4.0.0
	* 'new-run' now allows the user to run scripts that use a special block
	  to define their requirements (as in the executable stanza) in place
	  of a target. This also allows the use of 'cabal' as an interpreter
	  in a shebang line.
	* Add aliases for the "new-" commands that won't change when they
	  lose their prefix or are eventually replaced by a third UI
	  paradigm in the future. (#5429)
	* 'outdated' now accepts '--project-file FILE', which will look for bounds
	  from the new-style freeze file named FILE.freeze. This is only
	  available when `--new-freeze-file` has been passed.
	* 'new-repl' now accepts a '--build-depends' flag which accepts the
	  same syntax as is used in .cabal files to add additional dependencies
	  to the environment when developing in the REPL. It is now usable outside
	  of projects. (#5425, #5454)
	* 'new-build' now treats Haddock errors non-fatally. In addition,
	  it attempts to avoid trying to generate Haddocks when there is
	  nothing to generate them from. (#5232, #5459)
	* 'new-run', 'new-test', and 'new-bench' now will attempt to resolve
	  ambiguous selectors by filtering out selectors that would be invalid.
	  (#4679, #5461)
	* 'new-install' now supports installing libraries and local
	  components. (#5399)
	* Drop support for GHC 7.4, since it is out of our support window
	  (and has been for over a year!).
	* 'new-update' now works outside of projects. (#5096)
	* Extend `plan.json` with `pkg-src` provenance information. (#5487)
	* Add 'new-sdist' command (#5389). Creates stable archives based on
	  cabal projects in '.zip' and '.tar.gz' formats.
	* Add '--repl-options' flag to 'cabal repl' and 'cabal new-repl'
	commands. Passes its arguments to the invoked repl, bypassing the
	new-build's cached configurations. This assures they don't trigger