@@ -2,6 +2,7 @@
 
 2.6.0.0 (current development version)
 	* New solver flag: '--reject-unconstrained-dependencies'. (#2568)
+	* Add '--storedir' alias to '--store-dir' option (#5484).
 
 2.4.0.0
 	* 'new-run' now allows the user to run scripts that use a special block
